# moments

./: .buildinfo  .gitignore  LICENSE.txt  MANIFEST.in  README.md  README.txt  bitbucket-pipelines.yml  epydoc.config  genindex.html  index.html  installation.html  integration.py  integration_multiD.py  integration_multiD_sparse.py  integration_splitpop.py  integration_splitpop2.py  introduction.html  jackknife.py  moments.py  moments_v0.py  moments_v2.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  test.py  test_demo_1D.py  test_demo_2D.py  test_multiD.py  testdadi.py  utils.py
.doctrees/: environment.pickle  index.doctree  installation.doctree  introduction.doctree
.doctrees/api/: api_demes.doctree  api_ld.doctree  api_moments.doctree
.doctrees/extensions/: demes.doctree  triallele.doctree  two_locus.doctree
.doctrees/ld/: inference.doctree  ld.doctree  parsing.doctree
.doctrees/modules/: dfe.doctree  diversity.doctree  recombination.doctree  two_locus_selection.doctree
.doctrees/sfs/: inference.doctree  parsing.doctree  sfs.doctree
.github/workflows/: build_docs.yml  lint.yml  tests.yml  wheels.yml
_modules/: index.html
_modules/moments/: Demographics1D.html  Demographics2D.html  Demographics3D.html  Godambe.html  Inference.html  Misc.html  Plotting.html  Spectrum_mod.html
_sources/: index.rst.txt  installation.rst.txt
_sources/api/: api_demes.rst.txt  api_ld.rst.txt  api_moments.rst.txt
_sources/extensions/: triallele.rst.txt  two_locus.rst.txt
_sources/ld/: ld.rst.txt
_sources/modules/: dfe.rst.txt  diversity.rst.txt  recombination.rst.txt  two_locus_selection.rst.txt
_sources/sfs/: inference.rst.txt
api/: api_demes.html  api_ld.html  api_moments.html
bench/: bench.py  demographic_models_dadi.py  demographic_models_moments.py  gen_lim_fs_extrap.py  report.py
doc/: annexes.tex  moments.tex
doc/manual/: OutOfAfrica.py  YRI_CEU_CHB.fs  make_figures.py  manual.tex  popgen.bib
doc/moments/: annexes.tex  moments.tex  optimisation.tex
docs/: Makefile  api.rst  api_moments.rst  conf.py  demes.rst  dfe.rst  index.rst  inference.rst  installation.rst  introduction.rst  ld.rst  sfs.rst  two_locus.rst  visualization.rst
docs/api/: api_demes.rst  api_ld.rst  api_moments.rst
docs/data/: bootstrap_sets.split_mig.100_reps.bp  im-parsing-example.ld_stats.bp  im-parsing-example.map.txt  msl_data.bp  (+21 more)
examples/: variable_migration.py
extensions/: demes.html  triallele.html  two_locus.html
ld/: inference.html  ld.html  parsing.html
modules/: dfe.html  diversity.html  recombination.html  two_locus_selection.html
moments/: Demes.py  Demographics1D.py  Demographics2D.py  Demographics3D.py  Godambe.py  Inference.py  Integration.py  Integration_nomig.py  Integration_sparse.py  Jackknife.pyx  LinearSystem.py  LinearSystem_1D.py  LinearSystem_1D.pyx  LinearSystem_2D.py  LinearSystem_2D.pyx  Manips.py  Misc.py  ModelPlot.py  Numerics.py  Parsing.py  Plotting.py  Reversible.py  Spectrum_mod.py  Tridiag_solve.pyx  __init__.py  _version.py  checkUtils.py  testCheckUtils.py
old/: moments_v0.py  moments_v1.py  old.py
requirements/: tests.txt
sfs/: inference.html  parsing.html  sfs.html
software/: setup.py  ztest.py
tests/: readme.md  run_tests.py  test_Demes.py  test_DemesTimeWindows.py  test_FiniteGenome.py  test_Fstatistics.py  test_Integration.py  test_Jackknife.py  test_LD.py  test_LDParsing.py  test_LinearSystem.py  test_Manips.py  test_Migration.py  test_Parsing.py  test_Projection.py  test_Results.py  test_Reversible.py  test_SFSParsing.py  test_Selection.py  test_Spectrum.py  test_Triallele.py  test_TwoLocus.py  test_checkUtils.py  test_demes.py  test_genotype_calculations.py  test_sparse_1D.py  test_sparse_nD.py  testdadi.py  testdadi_multid.py
(+324 files in other folders)
