[build-system]
requires = [
    "setuptools",
    "setuptools_scm>=8",
    "wheel",
    "numpy>=2.0",
    "Cython>=0.25.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "moments/_version.py"

[project]
name = "moments-popgen"
authors = [
    {name = "Aaron Ragsdale", email = "apgragsdale@wisc.edu"},
    {name = "Simon Gravel", email = "simon.gravel@mcgill.ca"},
]
license = {text = "MIT"}
requires-python = ">=3.10, <3.14"
dynamic = ["version"]
dependencies=[
    "numpy >=2.0, <3.0",
    "cython >=0.25",
    "scipy >=1.3",
    "mpmath >=1.0",
    "demes >=0.2",
]
readme = "README.md"
description = "Population genetic statistics for evolutionary inference"

[project.urls]
Repository = "https://github.com/MomentsLD/moments"
Documentation = "https://momentsld.github.io/moments/"

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests"
build-frontend = "build"

[tool.cibuildwheel.macos]
build = "cp3{12,13}-*"

[tool.cibuildwheel.linux]
build = "cp*manylinux*"
archs = "x86_64"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
]
